--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,22 @@
 <body>
 	<header>
 		<div class="col-xs-3">
-			LOGO
+			<div class="circle">
+			  <br />
+			  Feeling
+			  <br />
+			  Down?
+			</div>
 		</div>
-		<div class="col-xs-4">
+		<div class="col-xs-4 slogan">
 			Splurting out happiness quotes to brighten you day.
 		</div>
-		<div class="col-xs-5">
+		<div class="col-xs-5 links">
 			<%= link_to 'Contribute', '#' %>
 			<%= link_to 'About', '#' %>
 		</div>
 	</header>
+	<hr />
 <br class="clear" />
 
 <%= yield %>
