added custom fonts from google

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
+
 .clear{
 	clear:both;
 }
@@ -36,6 +38,8 @@ transform:rotate(11deg);
 	color:black;
 	font-size: 25px;
 	border-bottom: 1px solid #dfdfdf;
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-weight: bold;
 }
 
 header {
@@ -46,6 +50,19 @@ header {
 hr {
 	clear:both;
 }
+
+
+h1 {
+	font-family: 'Open Sans Condensed', sans-serif;
+}
+
+h2 {
+  font-family: 'Open Sans Condensed', sans-serif;
+}
+
+
+
+
 
 
 
