--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,21 @@
 	<hr />
 <br class="clear" />
 
+<div class="container">
 <%= yield %>
+</div>
+
+<div class="footer">
+	<div class="container">
+		<div class="col-xs-6">
+			<%= link_to "This isn't enough. I need more quotes!", "#", :class => 'next-quote' %>
+		</div>
+		<div class="col-xs-6 footer-blurb">
+			Proudly built in Portland, Oregon by Chris Salvi <br />
+			Check out my blog on Ruby - <a href="#"> Ruby Express </a>
+		</div>
+	</div>
+</div>
 
 </body>
 </html>
