--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,18 +9,20 @@
 <body>
 	<header>
 		<div class="col-xs-3">
+			<%= link_to root_path, :class => 'logo' do %>
 			<div class="circle">
 			  <br />
 			  Feeling
 			  <br />
 			  Down?
 			</div>
+			<% end %>
 		</div>
 		<div class="col-xs-4 slogan">
 			Splurting out happiness quotes to brighten you day.
 		</div>
 		<div class="col-xs-5 links">
-			<%= link_to 'Contribute', '#' %>
+			<%= link_to 'Contribute', new_quote_path %>
 			<%= link_to 'About', '#' %>
 		</div>
 	</header>
@@ -34,7 +36,7 @@
 <div class="footer">
 	<div class="container">
 		<div class="col-xs-6">
-			<%= link_to "This isn't enough. I need more quotes!", "#", :class => 'next-quote' %>
+			<%= link_to "This isn't enough. I need more quotes!", root_path, :class => 'next-quote' %>
 		</div>
 		<div class="col-xs-6 footer-blurb">
 			Proudly built in Portland, Oregon by Chris Salvi <br />
