--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	<header>
@@ -23,14 +24,21 @@
 		</div>
 		<div class="col-xs-5 links">
 			<%= link_to 'Contribute', new_quote_path %>
-			<%= link_to 'About', '#' %>
+			<%= link_to 'About', about_path %>
 		</div>
 	</header>
 	<hr />
 <br class="clear" />
 
 <div class="container">
+	<% if flash[:error].present? %>
+		<div class="col-xs-10 col-xs-offset-1 alert alert-danger">
+			<%= flash[:error].html_safe %>
+		</div>
+	<% end %>
+
 <%= yield %>
+
 </div>
 
 <div class="footer">
