--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,12 +19,13 @@
 			</div>
 			<% end %>
 		</div>
-		<div class="col-xs-4 slogan">
+		<div class="col-xs-4 hidden-xs slogan">
 			Splurting out happiness quotes to brighten you day.
 		</div>
-		<div class="col-xs-5 links">
+		<div class="col-xs-8 col-xs-offset-1 col-sm-offset-0 col-sm-5 links">
 			 <!-- Button trigger modal -->
 		  <%= link_to 'Contribute', '#', :data => {:toggle => 'modal', :target =>'#myModal'} %>
+		  &nbsp;&nbsp;
 			<%= link_to 'About', about_path %>
 		</div>
 	</header>
@@ -42,8 +43,9 @@
         
           <%= simple_form_for Quote.new do |f| %>
           	<div class="modal-body">
-            	<%= f.input :saying %>
-            	<%= f.input :author %>
+            	<%= f.input :saying, :label => "What is the saying you want to add?", :placeholder => "Fear is the disease. Hustle is the antidote." %>
+            	<br />
+            	<%= f.input :author, :label => "Who is the author of the quote?", :placeholder => 'Travis Kalanick' %>
         		</div>    
             <br />	
 	        	<div class="modal-footer">
@@ -73,12 +75,12 @@
 
 <div class="footer">
 	<div class="container">
-		<div class="col-xs-6">
+		<div class="col-xs-12 col-sm-6">
 			<%= link_to "This isn't enough. I need more quotes!", root_path, :class => 'next-quote' %>
 		</div>
-		<div class="col-xs-6 footer-blurb">
-			Proudly built in Portland, Oregon by Chris Salvi <br />
-			Check out my blog on Ruby - <a href="#"> Ruby Express </a>
+		<div class="col-xs-12 col-sm-6 footer-blurb">
+			Proudly built in Portland, Oregon by <a href="http://github.com/donsalvadori"> Chris Salvi</a> <br />
+			Check out my blog on Ruby - <a href="http://donsalvadori.github.io/"> Ruby Express </a>
 		</div>
 	</div>
 </div>
