--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,2 +1,14 @@
-<h1> <%= @quote.saying %> </h1>
-<h2> <%= @quote.author %> </h2>
+<h2> <span>SPLURTY / No. <%= @quote.id %></span> 
+	Here's a quote <u>to cheer you up</u>!
+</h2>
+
+<br />
+<br />
+
+<h1 class='col-centered'> <%= @quote.saying %> </h1>
+<h2 class="pull-right"> <%= @quote.author %> </h2>
+
+<br class="clear" />
+<br />
+<br />
+<br />
