--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -4,9 +4,10 @@
 
 <br />
 <br />
+<br />
 
-<h1 class='col-centered'> <%= @quote.saying %> </h1>
-<h2 class="pull-right"> <%= @quote.author %> </h2>
+<h1 class='text-center'> <%= @quote.saying %> </h1>
+<h2 class="pull-right"> ~ <%= @quote.author %> </h2>
 
 <br class="clear" />
 <br />
