--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,5 +1,5 @@
 <h2> <span>SPLURTY / No. <%= @quote.id %></span> 
-	Here's a quote <u>to cheer you up</u>!
+	Here's a quote to cheer you up!
 </h2>
 
 <br />
