--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,9 +43,9 @@
         
           <%= simple_form_for Quote.new do |f| %>
           	<div class="modal-body">
-            	<%= f.input :saying, :label => "What is the saying you want to add?", :placeholder => "Fear is the disease. Hustle is the antidote." %>
+            	<%= f.input :saying, :label => "What is the saying you want to add?", :placeholder => "Happiness is a warm Gun." %>
             	<br />
-            	<%= f.input :author, :label => "Who is the author of the quote?", :placeholder => 'Travis Kalanick' %>
+            	<%= f.input :author, :label => "Who is the author of the quote?", :placeholder => 'John Lennon' %>
         		</div>    
             <br />	
 	        	<div class="modal-footer">
