--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -7,7 +7,7 @@
 <br />
 
 <h1 class='text-center'> <%= @quote.saying %> </h1>
-<h2 class="pull-right author-align"> ~ <%= @quote.author %> </h2>
+<h2 class="author-align"> ~ <%= @quote.author %> </h2>
 
 <br class="clear" />
 <br />
